--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,86 @@
+:root {
+  --rich-black-fogra-29: #030511ff;
+  --space-cadet: #242f54ff;
+  --independence: #4c4f6fff;
+  --beau-blue: #c6ddf2ff;
+  --carolina-blue: #3f96caff;
+  --persimmon: #db5d13ff;
+}
+
+body{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  background-color: var(--space-cadet);
+}
+
+#title{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+  color: var(--beau-blue);
+}
+
+.player-display{
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 10px;
+  color: var(--beau-blue);
+}
+
 .board{
   display: grid;
   grid-template-columns: auto auto auto;
-  
+  width: 30vw;
+  height: 15vw;
+  border-radius: 25px;
+  gap: 5px;
+  margin-top: 4vh;
+  margin-bottom: 4vh;
+}
+
+.reset-board{
+  background-color: var(--persimmon);
+  border:none;
+  color: var(--beau-blue);
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.change-name{
+  background-color: var(--carolina-blue);
+  border:none;
+  color: var(--beau-blue);
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 .cell{
   display: flex;
+  align-items: center;
   justify-content: center;
-  justify-items: center;
-  border: 1px solid black;
-  background-color: aqua;
-  padding: 10px;
+  border: 1px solid var(--independence);
+  background-color: var(--rich-black-fogra-29);
+  border-radius: 25px;
+  height: 10vh;
+  width: 10vw;
+  font-size: 20px;
+  font-weight: bold;
+  color: var(--beau-blue);
+}
+
+.activated {
+  background-color: var(--carolina-blue);
 }
